--- a/1/index.html
+++ b/1/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>暴力24点</title>
         <meta charset="utf-8" />
-        <script src="main.js"></script>
+        <script src="main.min.js"></script>
+        <!--未压缩版main.js，规范版main.norm.js-->
         <script src="jquery.js"></script>
         <style>
             #error{
